# fib-invest

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  fib_invest.db  pyproject.toml
backend/app/: main.py
backend/app/api/: backtest_routes.py  dashboard_routes.py  data_routes.py  order_routes.py  router.py  strategy_routes.py
backend/app/backtest/: __init__.py  broker_sim.py  engine.py  metrics.py
backend/app/core/: config.py  database.py
backend/app/data/: __init__.py  provider.py  service.py
backend/app/data/adapters/: akshare.py
backend/app/execution/: __init__.py  broker.py  order_builder.py  pipeline.py
backend/app/execution/adapters/: simulated.py
backend/app/models/: __init__.py  account.py  bar.py  order.py  strategy_config.py  symbol.py  trade.py
backend/app/risk/: __init__.py  engine.py  rule.py
backend/app/risk/rules/: cancel_limit.py  daily_loss.py  position_limit.py  price_limit.py  strategy_circuit.py
backend/app/strategy/: __init__.py  base.py  config_loader.py  registry.py  signal.py
backend/app/strategy/builtins/: __init__.py  ma_cross.py
backend/app/worker/: tasks.py  worker.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_models.py
backend/tests/backtest/: test_engine.py  test_metrics.py
backend/tests/data/: test_akshare.py  test_provider.py  test_service.py
backend/tests/execution/: test_pipeline.py  test_simulated_broker.py
backend/tests/risk/: test_rules.py
backend/tests/strategy/: test_base.py  test_ma_cross.py  test_registry.py
(+18 files in other folders)
